refactor: KCY 테스트 v2.0 (#103)
* refactor: KCY 테스트 v2.0 초안

* refactor: KCY 테스트 v2.0 둘째..

* refactor: KCY 테스트 v2.0 셋째...

* refactor: 베이스점수 삭제

* chore: KCY 테스트 v2.0 기타 변경사항

* refactor: 코드래빗 리뷰 반영

* refactor: selectedOptionIds의 DB 상 유효 활성 옵션 ID 일치 정합성 검증

* chore: 주석 정합성

* refactor: 에러코드